2004-11-22  Kubo Hiroshi  <hiroshi-news@netird.ad.jp>
	In fj.sources, <20041122.035305.59473152.hiroshi-news@netird.ad.jp>

	* its/jiskana.el: New file.

	* Makefile.in (ITSSRCS): Add its/jiskana.el.

	* its-keydef.el (its-define-select-key-list): Add jiskana.

2004-07-02  SANETO Takanori  <sanewo@ba2.so-net.ne.jp>

	* egg/anthy.el (anthy-new-environment): Use anthyipc-get-greeting
	only right after starting the anthy-agent process.

2004-05-21  Jun Kuriyama  <kuriyama@imgsrc.co.jp>

	* Makefile.in (install-site): Put the .nosearch file into egg and
	its subdirectories.

2002-09-09  NIIBE Yutaka  <gniibe@m17n.org>

	Check JIS x0213 support at compile time.
	* check-jisx0213.el: New file.
	* configure.in: Check if JIS X0213 is supported or not.
	* Makefile.in (TOPSRCS): Remove egg-x0213.el.
	(DEPS): Don't load jisx0213.el.
	(ITSSRCS): Removed its/aynu.el.
	(AYNU): New variable.

	Bug fix.
	* its/thai.el (its-thai-add-vowel, its-thai-add-tone): Bug fixes.
	Just call compose-string.
	
2002-08-26  ISHIKAWA Mutsumi <ishikawa@linux.or.jp>, 
	Takahiro Kambe <taca@sky.yamashina.kyoto.jp>, 
	Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (TOPSRCS): Remove	egg-util.el.  Added egg-x0213.el.
	(ITSSRCS): Added its/greek.el
	its/greek.elc: Depends on its-keydef.elc.

2002-08-23  NIIBE Yutaka  <gniibe@m17n.org>

	* AUTHORS (NIIBE Yutaka): Updated.
	* egg-mlh.el: Update e-mail address.

	* leim-list.el: Removed eval-when contstuct.  Reoved "loading
	another" feature.
	(egg-activate-anthy): Added.

2002-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>, NIIBE Yutaka  <gniibe@m17n.org>

	* egg-util.el: Removed.

2002-08-08  NIIBE Yutaka  <gniibe@m17n.org>

	* Makefile.in (EGGSRCS): Added anthy.el and anthyipc.el
	(srcdir, top_srcdir, VPATH): Added.
	(DEPS): Use top_srcdir.

	Added ANTHY support.
	* egg/anthy.el egg/anthyipc.el: New files.
	* leim-list.el: Added anthy.

2002-08-02  SAITO Takuya <reed@lily.freemail.ne.jp>

	* its.el (its-previous-line): point-mim -> point-min (typo)
