@@ -397,7 +397,7 @@ This variable override `its-delete-by-keystroke'."
 (defun its-self-insert-char ()
   (interactive)
   (let ((inhibit-read-only t)
-	(key last-command-char)
+	(key last-command-command)
 	(cursor (get-text-property (point) 'its-cursor))
 	(syl (get-text-property (1- (point)) 'its-syl)))
     (cond
@@ -1264,7 +1264,7 @@ Return last state."
   (interactive "P")
   (let ((syl (and (null (get-text-property (point) 'its-cursor))
 		  (get-text-property (1- (point)) 'its-syl))))
-    (if (its-keyseq-acceptable-p (vector last-command-char) syl)
+    (if (its-keyseq-acceptable-p (vector last-command-command) syl)
 	(its-self-insert-char)
       (its-kick-convert-region n))))
 
